force-app/main/default/objects/zkmulti__MCPickup__c/zkmulti__MCPickup__c.object-meta.xml
<CustomObject>
    <label>Pickup</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Multi Carrier Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>