force-app/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Contact_Phone__c</fullName>
    <label>Contact Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>