force-app/main/default/objects/zkmulti__MCPickup__c/fields/zkmulti__Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>