force-app/main/default/objects/zkmulti__MCPickup__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Pickup_Cancelled__c</columns>
    <columns>zkmulti__Pickup_Number__c</columns>
    <columns>zkmulti__Contact_Name__c</columns>
    <columns>zkmulti__Company_Name__c</columns>
    <columns>zkmulti__Street__c</columns>
    <columns>zkmulti__City__c</columns>
    <columns>zkmulti__State__c</columns>
    <columns>zkmulti__Zip_Postal_Code__c</columns>
    <columns>zkmulti__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>